# TextureSetNeuralCompressionSample

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.bat
cmake/: CMakeBuildSettings.cmake  CMakeMacros.cmake  CMakePlatforms.cmake  FindD3D12.cmake
models/: LICENSE
models/michel/bc1_mip/: tex0_0.bc1  tex1_0.bc1  tex2_0.bc1  tex3_0.bc1
models/michel/bc6/: tex0.bc6  tex1.bc6  tex2.bc6  tex3.bc6  tex4.bc6
models/michel/uncompressed/: tex0.tex_bin  tex1.tex_bin  tex2.tex_bin  tex3.tex_bin  tex4.tex_bin
paths/: poi_list.csv
project/: CMakeLists.txt  dino_danger.cpp
sdk/include/dx12/: dx12_backend.h  dx12_containers.h  dx12_helpers.h
sdk/include/graphics/: backend.h  descriptors.h  event_collector.h  types.h
sdk/include/math/: operators.h  types.h
sdk/include/network/: mlp.h  tsnc.h
sdk/include/render_pipeline/: constant_buffers.h  dino_renderer.h  gbuffer_renderer.h  ibl.h  material_renderer.h  skinned_mesh_renderer.h  texture_manager.h  tile_classifier.h  types.h
sdk/include/scene/: mesh.h
sdk/include/tools/: camera_controller.h  command_line.h  directory_utilities.h  dirent.h  gpu_helpers.h  imgui_helpers.h  profiling_helper.h  security.h  shader_utils.h  stream.h  stream.inl  string_utilities.h  texture_utils.h
sdk/src/: CMakeLists.txt
sdk/src/dx12/: dx12_backend_command_buffer.cpp  dx12_backend_command_queue.cpp  dx12_backend_compute_shader.cpp  dx12_backend_fence.cpp  dx12_backend_graphics_device.cpp  dx12_backend_graphics_pipeline.cpp  dx12_backend_graphics_resources.cpp  dx12_backend_imgui.cpp  dx12_backend_profiling_scope.cpp  dx12_backend_swap_chain.cpp  dx12_backend_window.cpp  dx12_helpers.cpp
sdk/src/graphics/: backend.cpp  event_collector.cpp
sdk/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_win32.cpp  imgui_tables.cpp  imgui_widgets.cpp
sdk/src/math/: operators.cpp
sdk/src/network/: mlp.cpp  tsnc.cpp
sdk/src/render_pipeline/: dino_renderer.cpp  gbuffer_renderer.cpp  ibl.cpp  material_renderer.cpp  skinned_mesh_renderer.cpp  texture_manager.cpp  tile_classifier.cpp
sdk/src/scene/: mesh.cpp
sdk/src/tools/: camera_controller.cpp  command_line.cpp  directory_utilities.cpp  gpu_helpers.cpp  profiling_helper.cpp  security.cpp  shader_utils.cpp  stream.cpp  string_utilities.cpp  texture_utils.cpp
shaders/: Blit.graphics  Cubemap.graphics  FP32toFP16.compute  PostProcess.graphics
shaders/Classification/: FirstPass.compute  PrepareIndirection.compute  Reset.compute  SecondPass.compute
shaders/GBuffer/: Inference.compute
shaders/GBuffer/Textures/: Inference.compute
shaders/Lighting/: DebugView.compute  Lit.compute  ShadowRT.compute
shaders/Material/: MaterialPass.compute
shaders/Material/Textures/: MaterialPass.compute
shaders/Mesh/: DisplacementEvaluation.compute  SkinMesh.compute  VisibilityPass.graphics
shaders/shader_lib/: bsdf.hlsl  color.hlsl  common.hlsl  constant_buffers.hlsl  inference_utils.hlsl  intersection.hlsl  lightloop.hlsl  material.hlsl  mesh_utilities.hlsl  pbr.hlsl  random.hlsl  transform.hlsl  visibility_utilities.hlsl
textures/: LICENSE  convolved_ibl_bg.tex_bin  convolved_ibl_ggx.tex_bin  convolved_ibl_lambert.tex_bin  pre_integrated_fdg.tex_bin
